rename FloatTracker -> TrackedFloats

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ origin, smoothing the way to a reliable codebase.
 Components:
 <ul>
   <li>
-    <tt>FloatTracker.jl</tt> for logging and fuzzing exceptional values in Julia code:
+    <tt>TrackedFloats.jl</tt> for logging and fuzzing exceptional values in Julia code:
     <br />
-    <a href="https://github.com/utahplt/FloatTracker.jl"><tt>https://github.com/utahplt/FloatTracker.jl</tt></a>
+    <a href="https://github.com/utahplt/TrackedFloats.jl"><tt>https://github.com/utahplt/TrackedFloats.jl</tt></a>
     <ul>
       <li>Examples: <a href="https://github.com/utahplt/FloatTrackerExamples"><tt>https://github.com/utahplt/FloatTrackerExamples</tt></a></li>
     </ul>
